attached_assets/Pasted-Failed-to-compile-SyntaxError-home-runner-workspace-portfolio-react-kaihuan-src-components-Conta-1740895312100.txt
Failed to compile.

SyntaxError: /home/runner/workspace/portfolio-react-kaihuan/src/components/Contact.jsx: Unterminated JSX contents. (22:12)
  20 |                 </form>
  21 |         </div>
> 22 |       </div>
     |             ^
  23 |     );
  24 |   };
  25 |
ERROR in ./src/components/Contact.jsx
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/portfolio-react-kaihuan/src/components/Contact.jsx: Unterminated JSX contents. (22:12)

  20 |                 </form>
  21 |         </div>
> 22 |       </div>
     |             ^
  23 |     );
  24 |   };
  25 |
    at instantiate (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:67:32)
    at constructor (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:364:12)
    at FlowParserMixin.raise (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:3364:19)
    at FlowParserMixin.jsxReadToken (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:6893:20)
    at FlowParserMixin.getTokenFromCode (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7248:19)
    at FlowParserMixin.getTokenFromCode (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:5610:20)
    at FlowParserMixin.nextToken (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:2450:10)
    at FlowParserMixin.next (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:2365:10)
    at FlowParserMixin.eat (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:2370:12)
    at FlowParserMixin.expect (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:3760:10)
    at FlowParserMixin.jsxParseClosingElementAt (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7143:10)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7159:37)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7162:32)
    at FlowParserMixin.jsxParseElement (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7220:17)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7233:19)
    at FlowParserMixin.parseExprSubscripts (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11171:23)
    at FlowParserMixin.parseUpdate (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11153:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11127:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10956:61)
    at FlowParserMixin.parseExprOps (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10962:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10937:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10895:21)
    at /home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:5967:39
    at FlowParserMixin.tryParse (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:3768:20)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:5967:18)
    at /home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10863:39
    at FlowParserMixin.allowInAnd (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:12640:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10863:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11817:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:6079:18)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11446:23)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:7238:20)
    at FlowParserMixin.parseExprSubscripts (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11171:23)
    at FlowParserMixin.parseUpdate (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11153:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:11127:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10956:61)
    at FlowParserMixin.parseExprOps (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10962:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10937:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10895:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:6030:18)
    at FlowParserMixin.parseExpressionBase (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10845:23)
    at /home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10840:39
    at FlowParserMixin.allowInAnd (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:12635:16)
    at FlowParserMixin.parseExpression (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:10840:17)
    at FlowParserMixin.parseReturnStatement (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:13296:28)
    at FlowParserMixin.parseStatementContent (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:12954:21)
    at FlowParserMixin.parseStatement (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:12917:17)
    at FlowParserMixin.parseStatement (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:5309:24)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:13497:25)
    at FlowParserMixin.parseBlockBody (/home/runner/workspace/portfolio-react-kaihuan/node_modules/@babel/parser/lib/index.js:13489:10)

ERROR in [eslint] 
src/components/Contact.jsx
  Line 22:12:  Parsing error: Unterminated JSX contents. (22:12)

webpack compiled with 2 errors
